<resources>
    <string name="app_name">Story2</string>
    <string name="hello" translatable="false">hello</string>
    <string name="add_new_files">Add new files</string>
    <string name="book_name" translatable="false">Book name</string>

    <string name="facebook_app_id">619775151908562</string>
    <string name="fb_login_protocol_scheme">fb619775151908562</string>

    <string name="search_for_a_book">Search for a book</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="previous_page">previous page</string>
    <string name="rewind_10_seconds">rewind 10 seconds</string>
    <string name="play">play or pause</string>
    <string name="play_or_pause">play or pause</string>
    <string name="page_number_change_slider">page number change slider</string>
    <string name="home"> Home</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="search_logo">Search</string>
    <string name="open_menu">open menu to change voice settings </string>
    <string name="go_to_this_setting_s_page">Go to this setting\'s page</string>
    <string name="go_back">go back</string>
    <string name="navigate_by">Navigate by️</string>
    <string name="speed">Speed</string>
    <string name="accent">Accent</string>
    <string name="google_sign_in">Google sign in</string>
    <string name="app_icon">App icon</string>
    <string name="forward_10_seconds">forward 10 seconds</string>
    <string name="next_page">next page</string>
    <string name="male_voice_button">male voice </string>
    <string name="female_voice">female Voice</string>
    <string name="voice_pitch_change_slider">Voice Pitch change slider</string>
    <string name="voice_speed_change_slider">Voice speed change slider</string>
    <string name="gender">Gender</string>
    <string name="voices">VOICES</string>
    <string name="pitch">Pitch</string>
    <string name="voice_settings">voice Settings</string>
    <string name="offline_voice">Offline voice</string>
    <string name="volume">VOLUME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="stop">STOP</string>
    <string name="background_music">background music</string>
    <string name="pagenumber_and_booklength_seperator">/</string>
    <string name="_1">Page 1 of 1</string>
    <string name="add_pdf_and_epub_documents">Add Pdf and ePubs  here</string>
    <string name="install_google_tts_engine">Install Google Text-to-speech engine to get amazing voices for free!</string>
    <string name="install">Install</string>
    <string name="install_google_text_to_speech_from_play_store">Install Google text to speech from play store</string>
    <string name="google_text_to_speech_image">Google text to speech image</string>
    <string name="settings">settings</string>
    <string name="image">Image</string>
</resources>
