<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".VoiceFragment">


        <TextView
            android:id="@+id/textView2"
            style="@style/voiceSettingsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/playerViewMargin"
            android:text="@string/speed"
           />
        <include android:id="@+id/speedSeekBar" layout="@layout/seekbar_layout" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/speedSeekBar"
            android:layout_width="wrap_content"
            style="@style/voiceSettingsTextStyle"
            android:layout_height="wrap_content"
            android:id="@+id/pitchTextView"
            android:text="@string/pitch"
            app:layout_constraintStart_toStartOf="parent"
            />

        <include
            android:id="@+id/pitchSeekBar"
            layout="@layout/seekbar_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/accentConstraintLayout"
            app:layout_constraintTop_toBottomOf="@id/pitchTextView" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/accentConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pitchSeekBar">

            <TextView
                android:id="@+id/textView"
                style="@style/voiceSettingsTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="3" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/voiceListLinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/accentConstraintLayout"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                style="@style/voiceSettingsTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/voices"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/voices" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvVoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/homeHorizontalMargin"
                android:scrollbars="none"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                tools:itemCount="5"
                tools:listitem="@layout/voice_item"
                 />
        </LinearLayout>
    </LinearLayout>
</layout>