<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="bookLen"
            type="Integer" />
        <variable
            name="currentPage"
            type="Integer"
            />
        <variable
            name="playerViewModel"
            type="com.jainam.story2.player.PlayerViewModel" />
        <variable
            name="playButtonState"
            type="com.jainam.story2.player.PlayButtonState" />

    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        tools:background="@drawable/ic_app_background"
        android:id="@+id/playerConstraintLayout"
        android:layout_height="match_parent"
        tools:context=".player.PlayerFragment">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/textCardViewPager"
            android:layout_width="280dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:background="@drawable/card_background"
            android:focusable="false"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/pageNumLayout"
            />

        <include
            android:id="@+id/page_seek_bar_layout"
            layout="@layout/seekbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/homeHorizontalMargin"
            app:layout_constraintBottom_toTopOf="@id/playButtonFrameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pageNumLayout" />

        <ImageButton
            android:layout_marginStart="@dimen/playerViewMargin"
            android:id="@+id/prevPageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/previous_page"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back_page_icon"
            app:layout_constraintBottom_toTopOf="@id/music_button"
            app:layout_constraintEnd_toStartOf="@id/backward10secondsButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page_seek_bar_layout"
            android:onClick="@{()->playerViewModel.decreasePageNum()}"
            />

        <ImageButton
            android:id="@+id/backward10secondsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/rewind_10_seconds"
            android:padding="10dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@id/music_button"
            app:layout_constraintStart_toEndOf="@+id/prevPageButton"
            app:layout_constraintTop_toBottomOf="@+id/page_seek_bar_layout"
            app:layout_constraintEnd_toStartOf="@id/playButtonFrameLayout"
            app:srcCompat="@drawable/ic_10_seconds_backward_icon"

            />

        <FrameLayout
            android:id="@+id/playButtonFrameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/music_button"
            app:layout_constraintEnd_toStartOf="@id/forward10Seconds"
            app:layout_constraintStart_toEndOf="@id/backward10secondsButton"
            app:layout_constraintTop_toBottomOf="@id/page_seek_bar_layout">

            <ImageView
                android:id="@+id/playPauseButton"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:background="@null"
                android:contentDescription="@string/play_or_pause"
                android:scaleType="fitXY"
                tools:visibility="visible"
                android:src="@drawable/ic_play_button"
                toggleButton="@{playButtonState}"
                android:visibility="invisible" />

            <ProgressBar
                tools:visibility="invisible"
                android:id="@+id/progressBarPlayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/progress" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/forward10Seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/forward_10_seconds"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_10_seconds_forward_icon"
            app:layout_constraintBottom_toTopOf="@id/button_voice"
            app:layout_constraintEnd_toStartOf="@+id/nextPageButton"
            app:layout_constraintStart_toEndOf="@id/playButtonFrameLayout"
            app:layout_constraintTop_toBottomOf="@+id/page_seek_bar_layout"
            />
        <ImageButton
            android:id="@+id/nextPageButton"
            android:layout_marginEnd="@dimen/playerViewMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/next_page"
            android:elevation="10dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_next_page_icon"
            app:layout_constraintBottom_toTopOf="@id/button_voice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/forward10Seconds"
            app:layout_constraintTop_toBottomOf="@+id/page_seek_bar_layout"
            android:onClick="@{()->playerViewModel.increaseCurrentPageNumTillEnd()}"
            />

        <ImageButton
            android:id="@+id/music_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="35dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/background_music"
            android:scaleType="fitXY"
            android:src="@drawable/ic_music"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playButtonFrameLayout"
            android:layout_marginBottom="20dp"
            />

        <ImageButton
            android:id="@+id/button_voice"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="35dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/voice_settings"
            android:scaleType="fitXY"
            android:src="@drawable/ic_voice_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playButtonFrameLayout"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:id="@+id/pageNumLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/textCardViewPager"
            app:layout_constraintBottom_toTopOf="@id/page_seek_bar_layout"
            >

            <TextView
                android:id="@+id/bookPageNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:inputType="number"
                android:text="@{`Page ` + currentPage + ` of ` + bookLen}"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                tools:text = "Page 1 of 13"
                tools:ignore="TextViewEdits" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




</layout>